...
                      ),
                    ),
                  ),
                  Container(
                    margin: const EdgeInsets.symmetric(vertical: 10),
                    child: TextFormField(
                      key: const ValueKey('emailLoginField'),
                      controller: _emailController,
                      cursorColor: Colors.green.shade900,
                      style: TextStyle(color: Colors.grey.shade400),
                      decoration: InputDecoration(
                        labelText: 'Email',
                        labelStyle: TextStyle(
...
                          !s!.contains('@') ? 'invalid email' : null,
                    ),
                  ),
                  Container(
                    margin: const EdgeInsets.symmetric(vertical: 10),
                    child: TextFormField(
                      key: const ValueKey('passwordLoginField'),
                      controller: _passwordController,
                      obscureText: true,
                      cursorColor: Colors.green.shade900,
                      style: TextStyle(color: Colors.grey.shade400),
                      decoration: InputDecoration(
                        labelText: 'Password',
...
